# ROS_backup

./: README.md  Test.txt  coba.txt
ros2_ws/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/my_cpp_py_pkg/lib/my_cpp_py_pkg/: cpp_exe
ros2_ws/install/my_cpp_py_pkg/share/my_cpp_py_pkg/: package.sh  package.xml
ros2_ws/install/navigation_tb3/lib/navigation_tb3/: pub_occupancy_grid
ros2_ws/install/navigation_tb3/share/navigation_tb3/: package.dsv  package.ps1  package.sh
ros2_ws/install/robot_control/lib/robot_control/: listener  publisher_member_function.cpp
ros2_ws/install/robot_control/share/robot_control/: package.bash  package.sh  package.zsh
ros2_ws/install/robot_cpp/lib/robot_cpp/: LaserScan  publisher
ros2_ws/install/robot_cpp/share/robot_cpp/: local_setup.sh  package.bash  package.sh  package.zsh
ros2_ws/install/robot_python/share/robot_python/: package.bash  package.sh  package.zsh
ros2_ws/install/robot_test/share/robot_test/: package.bash  package.sh  package.zsh
ros2_ws/src/: task1.py  task2.py  task3.py
ros2_ws/src/my_cpp_py_pkg/: CMakeLists.txt
ros2_ws/src/my_cpp_py_pkg/include/my_cpp_py_pkg/: cpp_header.hpp
ros2_ws/src/my_cpp_py_pkg/scripts/: py_node.py
ros2_ws/src/my_cpp_py_pkg/src/: cpp_node.cpp
ros2_ws/src/navigation_tb3/config/: mapping2.rviz  test.pgm
ros2_ws/src/robot_control/: CMakeLists.txt
ros2_ws/src/robot_cpp/: CMakeLists.txt
ros2_ws/src/robot_cpp/src/: laserscan.cpp  publisher.cpp
ros2_ws/src/robot_test/: CMakeLists.txt  package.xml
ros2_ws/src/robot_test/launch/: test.launch.py
(+7 files in other folders)
